# Uab_LDS_Grupo10_ChalkPowder

./: README.md  teste.txt
Diagrams/: sequence_diagram_CG.uml  sequence_diagram_KP.uml
graficos/: pyproject.toml
graficos/src/graficos/: __init__.py  controller.py  eventos.py  model.py  view.py
